{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "terrain",
            "id": "4322c2de-0908-48b3-96b1-95b988861fbd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "cf78c44f-da2f-47d6-9d0d-fb3334f304c2",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "359a19d9-f52d-45b1-88a3-25d5bb570c1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "bb71f9b5-9e9e-4f96-8c74-48ec25ca21d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ResetLevel",
                    "type": "Button",
                    "id": "e921829f-1fa6-47ff-9d21-61ec6dc16ac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoToLevelMenu",
                    "type": "Button",
                    "id": "0b5204db-c2a5-4261-b0de-8e7efceb59f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b1a372ea-9383-4fd1-be0d-cc2d0b5ec45d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "abedd4dc-3cc4-4d23-8b42-38c35cc9f6cb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "81a3fc4a-69ff-402c-9523-b6a2ff82efe1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "20f0c333-9d4b-41e1-81d9-7f0a23abdf4d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca98173c-76f4-4868-aea9-d6e52b1d96ed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7215574-20c4-4d39-a395-9810365be40e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44468605-19c6-469f-93e6-96f6a23e5601",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71c34b99-cd24-4bf2-bdbd-3cb2274de82b",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToLevelMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}